--- a/style.css
+++ b/style.css
@@ -65,13 +65,6 @@ div {
   width: 800px;
 }
 
-ul.locations p {
-  margin-bottom: 50px;
-  font-weight: normal;
-  font-size: 14pt;
-  font-style: italic;
-}
-
 ul.locations li {
   font-weight: bold;
   font-size: 14pt;
@@ -88,4 +81,11 @@ h2 {
   text-align: center;
   margin-bottom: 20px;
   margin-top: 40px;
+}
+
+li.addy {
+  margin-bottom: 50px;
+  font-weight: normal;
+  font-size: 14pt;
+  font-style: italic;
 }
