--- a/sales-style.css
+++ b/sales-style.css
@@ -1,3 +1,17 @@
+body {
+  background: tan;
+}
+
+fieldset {
+  background: grey;
+  color: white;
+}
+
+p {
+  font-weight: bold;
+  font-size: 140%
+}
+
 td {
   text-align: center;
 }
@@ -28,11 +42,13 @@ input[type="submit"] {
 	padding: 8px 22px;
 	border-radius: 3px;
 	color: white;
-	background: #444
+	background: #333
 	transition: 750ms all;
 	cursor: pointer;
+  font-weight: bold;
+  font-size: 120%;
 }	/* grabs submit button */
 
 input[type="submit"]:hover {
-background: #888;
+background: #111;
 }
