--- a/style.css
+++ b/style.css
@@ -1,93 +1,104 @@
-/* Master stylesheet kind of resetting here */
-* {
-/*  outline: 1px dotted orange; */
-  margin: 0px;
-  padding: 0px;
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  font-family: Helvetica, Verdana, Arial, sans-serif;
-  margin: 0px;
-  padding: 0px;
+	line-height: 1;
 }
-
-html, body {
-    height:100%;
+ol, ul {
+	list-style: none;
 }
-
-h1 h2 h3 h4 h5 h6 {
-  margin: 0px;
-  padding 0px;
-  font-weight: normal;
-  font-family: Helvetica, Verdana, Arial, sans-serif;
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 /*-----------------------------------*/
 
-div {
-  display:block;
-  float:left;
+/* base styles */
+body {
+  font-family: Helvetica;
+  font-size: 18px;
 }
 
-#container {
-  position: absolute;
+/* site style */
+header {
+  background: #444;
+    height: 100px;
+}
+
+.inner {
   width: 960px;
-  background: red;  /* set to same color as .right to maintain right bar */
-  margin:0px auto;
-  left: 10%;
-  /*outline: 1px dotted orange;*/
+  margin: 0 auto;
 }
 
-.left {
-  width: 800px;
-}
-
-.top {
-  height: auto;
-  background: #fff85c;
-}
-
-.right {
-  width: 160px;
-  height: 100%;
-  background: red;
-  text-align: center;
-  display: table;
-}
-
-.bottom {
-  height: 100%;
-  background: #ffffff;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.spacer {
-  height: 50px;
-  width: 800px;
-}
-
-ul.locations li {
+.inner img {
+  float: left;
   margin-top: 15px;
-  font-weight: bold;
-  font-size: 14pt;
-  list-style-type: none;
 }
 
-ul.locations {
-  margin-top: 20px;
-  font-weight: bolder;
-  font-size: 20pt;
-}
-
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
+.inner ul li {
+  display: inline-block;
+  margin-left: 50px;
   margin-top: 40px;
+  color: #fff;
 }
 
-ul > li.addy {
-  margin-bottom: 50px;
-  font-weight: lighter;
-  font-size: 12pt;
-  font-style: italic;
+main {
+  margin: 30px auto;
+  width: 960px;
+}
+
+.banner {
+  margin-bottom: 30px;
+  width: 960px;
+  height: auto;
+}
+
+.sub_banners li {
+  float: left;
+  margin-right: 30px;
+}
+
+.sub_banners li:last-child {
+  margin-right: 0px;
+  margin-bottom: 30px;
+}
+
+footer {
+  clear: left;
+  height: 150px;
+  background: #888;
 }
