--- a/sales-style.css
+++ b/sales-style.css
@@ -1,15 +1,63 @@
+
 body {
-  background: tan;
+  background: #FFE9E5;
+}
+
+header {
+  top: 0;
+  background: #a75433;
+  height: 100px;
+  position: fixed;
+  width: 100%;
+  opacity: .9;
+}
+
+h1 {
+  margin-top: 120px;
+}
+
+ol, ul {
+	list-style: none;
+  display: inline-block;
+}
+
+.inner {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.inner img {
+  margin-top: 15px;
+}
+
+.inner ul li {
+  display: inline-block;
+  margin-left: 50px;
+  margin-top: 0px;
+  color: #fff;
 }
 
 fieldset {
-  background: grey;
+  background: #a75433;
   color: white;
+  text-align: center;
+}
+
+.set_width {
+  width: 50px;
 }
 
 p {
   font-weight: bold;
   font-size: 140%
+}
+
+table {
+  margin: 0 auto 60px auto;
+}
+
+th {
+  background: #a75433;
 }
 
 td {
@@ -22,6 +70,7 @@ table, td {
 
 td, th {
      padding: 5px;
+     height: 60px;
 }
 
 tr:hover {
@@ -42,7 +91,7 @@ input[type="submit"] {
 	padding: 8px 22px;
 	border-radius: 3px;
 	color: white;
-	background: #333
+	background: lightgreen;
 	transition: 750ms all;
 	cursor: pointer;
   font-weight: bold;
@@ -50,5 +99,12 @@ input[type="submit"] {
 }	/* grabs submit button */
 
 input[type="submit"]:hover {
-background: #111;
+background: green;
+}
+
+footer {
+text-align: center;
+height: 20px;
+width: 100%;
+background: #a75433;
 }
