--- a/sales-style.css
+++ b/sales-style.css
@@ -1,6 +1,7 @@
 
 body {
   background: #FFE9E5;
+  font-family: Helvetica;
 }
 
 header {
@@ -10,6 +11,10 @@ header {
   position: fixed;
   width: 100%;
   opacity: .9;
+}
+
+a {
+  color: #FFE9E5;
 }
 
 h1 {
@@ -83,6 +88,11 @@ tr:hover {
 
 td:hover, th:hover {
   background-color: #FFA341
+}
+
+input[type=number] {
+  padding: 5px, 10px;
+  margin-right: 15px;
 }
 
 input[type="text"] {
