--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header {
   height: 100px;
   position: fixed;
   width: 100%;
-  opacity: .9;
+  opacity: .95;
 }
 
 .inner {
@@ -128,7 +128,7 @@ h2 {
   float: left;
   margin-right: 30px;
   width: 300px;
-  height: 400px;
+  height: 340px;
   text-align: center;
 }
 
@@ -141,9 +141,9 @@ h2 {
   color: red;
   font-weight: bolder;
   cursor: pointer;
-  animation-iteration-count: 10;
+  animation-iteration-count: infinite;
   animation-name: buy;
-  animation-duration: 3s;
+  animation-duration: .5s;
 }
 
 li span {
