--- a/css/sales-style.css
+++ b/css/sales-style.css
@@ -1,4 +1,3 @@
-
 body {
   background: #FFE9E5;
   font-family: Helvetica;
@@ -22,6 +21,7 @@ h1 {
   margin-top: 140px;
   margin-bottom: 40px;
   text-align: center;
+  font-size: 28px;
 }
 
 ol, ul {
@@ -80,6 +80,7 @@ td {
 
 table, td {
    border: 1px solid black;
+   border-spacing: 0px;
 }
 
 td, th {
